--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
 
 .myWrapper {
   width: 85%;
+  margin: 0 auto;
 }
 .container {
   /* max-width: 90%;
@@ -61,6 +62,22 @@ header {
   top: 0;
   left: 0;
   z-index: 999;
+}
+.FAQ {
+  position: relative;
+}
+.FAQ i {
+  position: absolute;
+  top: -55%;
+  right: -60%;
+}
+.footerFaq {
+  position: relative;
+}
+.footerFaq i {
+  margin-left: 5px;
+  position: absolute;
+  top: -10%;
 }
 /* Header End ---------------- */
 
@@ -663,7 +680,40 @@ span,
   margin-top: 24px;
 }
 .foot1Socials a:nth-child(2) {
-  margin: 0 20px;
+  margin: 0 15px;
+}
+.foot1Socials a:nth-child(4) {
+  margin-left: 15px;
+}
+.foot1Socials a {
+  font-size: 28px !important;
+  /* transition: 0.4s; */
+}
+.foot1Socials a:hover {
+  transform: scale(1.02);
+  /* filter: saturate(500%); */
+}
+#fb:hover {
+  color: #2d5bbd;
+}
+#insta:hover {
+  background: #d6249f;
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#youtube:hover {
+  color: red;
+}
+#linkedin:hover {
+  color: #0e76a8;
 }
 .footer h2 {
   font-family: "Euclid Light";
@@ -690,8 +740,170 @@ span,
 }
 .copyright {
   font-family: "Euclid Light";
+  display: flex;
+  align-items: center;
   font-size: 14px;
   line-height: 20px;
-  margin: 0 auto;
   padding: 20px 0 10px 0;
 }
+
+/* faq start */
+.logo img {
+  width: 184px;
+  height: 32px;
+}
+.main-nav {
+  display: flex;
+  gap: 40px;
+  font-family: "Euclid Medium";
+}
+.main-nav > li > a {
+  color: var(--2E3A59);
+}
+.main-right-nav {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.main-right-nav a {
+  color: var(--2E3A59);
+  font: normal 500 16px "Euclid Medium";
+}
+.main-lang {
+  color: var(--2E3A59);
+  font: normal 500 14px "Euclid Medium";
+}
+.main-sign {
+  border: 1px solid #c5cee0;
+  background-color: var(--white);
+  width: 108px;
+  color: var(--2E3A59);
+  border-radius: 8px;
+  padding: 10px 16px;
+}
+.faq-hero {
+  background: linear-gradient(
+    90.19deg,
+    #59acfb 0.08%,
+    #7d54fd 99.76%,
+    #8c8aff 99.76%
+  );
+  height: 260px;
+}
+.faq-hero-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 260px;
+  color: var(--white);
+  font: 600 48px "Euclid SemiBold";
+}
+.home-faq {
+  padding-top: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+}
+.home-faq > p {
+  font: 400 16px "Euclid Regular";
+  color: #f8f8f8;
+}
+.fa-chevron-right {
+  color: #f8f8f8;
+  margin: 0 4px 0 4px;
+}
+.main-header {
+  width: 100%;
+  height: 96px;
+  display: flex;
+  align-items: center;
+  z-index: 999;
+}
+footer {
+  margin-top: 150px;
+  height: 370px;
+  border: 1px solid #e4e9f2;
+}
+.main-footer {
+  display: flex;
+  padding-top: 60px;
+}
+.main-footer-icons {
+  display: flex;
+  column-gap: 20px;
+  margin-top: 15px;
+}
+.main-footer-left {
+  width: 25%;
+}
+.main-footer-right {
+  width: 75%;
+  display: flex;
+  justify-content: space-between;
+}
+.main-footer-heading {
+  color: var(--2E3A59);
+  font: 500 20px "Euclid Medium";
+}
+.one-right-footer li:not(:first-of-type) {
+  margin-top: 24px;
+}
+.main-footer-text {
+  color: var(--3E4B6C);
+  font: 400 16px "Euclid Regular";
+}
+.copyright {
+  display: flex;
+  margin: 16px 0;
+  width: 254px;
+  justify-content: space-evenly;
+}
+.copyright p {
+  color: var(--3E4B6C);
+  font: 400 14px "Euclid Regular";
+}
+.faq-questions {
+  margin-top: 80px;
+  margin-bottom: 147px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.one-faq-question {
+  padding: 14px 24px;
+  position: relative;
+  width: 800px;
+  background-color: #f7f9fc;
+}
+.one-faq-question {
+  margin-top: 16px;
+}
+.one-faq-question i {
+  cursor: pointer;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 14px;
+  right: 0;
+}
+.faq-question {
+  color: var(--2E3A59);
+  font: 500 14px "Euclid Medium";
+}
+.faq-answer {
+  color: var(--2E3A59);
+  font: 400 14px "Euclid Regular";
+  padding-top: 16px;
+  height: 0;
+  overflow: hidden;
+  transition: 0.5s;
+}
+.rotate {
+  transform-origin: center;
+  transform: rotate(45deg);
+}
+.red {
+  background-color: red;
+}
+
+/* faq end */
